--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -29,6 +29,9 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
     <!-- This file stores project-specific CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom-animations.css'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/library/bootstrap.min.css'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/library/toastr.min.css'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/library/font-awesome.min.css'%}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" />
     {% endblock %}
   </head>
