Texts and pictures

--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -110,15 +110,15 @@ Everyone is welcome to come and share the fun of Acro and move with us!</p>
 
                     <div id="horizontal_tab3" class="tab-pane fade">
                         <div class="col-sm-5 images-column">
-                            <img src="{% static 'images/imac-371x412.png' %}" alt="" class="img-responsive" />
+                            <img src="{% static 'images/acrofestival_pool.jpg' %}" alt="" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
                             <h6>Not only Acro!</h6>
-                            <p> <strong>consectetuer</strong> et. In arcu enim sit in libero scelerisque mauris sed. Nullam eleifend in varius arcu vitae feugiat magna id ut morbi consectetuer. In vivamus arcu. Id ut dui. Sed massa in. Scelerisque suscipit quisque maecenas aliquet in. Wisi mi ipsum. Elit et mauris. Duis in magni praesent <a href="#">content</a> massa.</p>
+                            <p>Many more things then just a floor to do acro and a teacher are included in this weekend!</p>
                             <ul>
-                                <li>Nisl cras vitae wisi odio amet.</li>
-                                <li>Lacus amet vestibulum belas</li>
-                                <li>Quis nunc curabitur assumenda</li>
+                                <li>Awesome local, Vegan, Organic Food</li>
+                                <li>Live Band and DJ for the Saturday Party</li>
+                                <li>Big pool to refresh (and ... some standing acro ;))</li>
                             </ul>
                         </div>
                     </div>
@@ -257,7 +257,7 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker2.jpg' %}" alt="Matthias Bleisch und Paule" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias Bleisch und Paule" class="img-responsive"></div>
                     <h3 class="name">Matthias & Paulina</h3>
                     <p class="text-alt"><small>Mäd und Pau</small></p>
                     <p class="about">Slacklining, Capoira, Acrobatics ... you name it. Moving is their thing. </p>
@@ -271,7 +271,7 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker3.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Salvatore</h3>
                     <p class="text-alt"><small>Bareful</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <p class="about"></p>
                     <ul class="speaker-socials">
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="#"><span class="fa fa-external-link"></span></a></li>
@@ -283,12 +283,10 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker4.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Phillip & Kath</h3>
-                    <p class="text-alt"><small>Evangelist @ Doogle</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <p class="text-alt"><small> Duo Kallipi</small></p>
+                    <p class="about"></p>
                     <ul class="speaker-socials">
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -297,26 +295,24 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker5.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Moody</h3>
-                    <p class="text-alt"><small>Graphic Designer</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <p class="text-alt"><small>The Moody</small></p>
+                    <p class="about"></p>
                     <ul class="speaker-socials">
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker2.jpg' %}" alt="John Doe" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_acrolama.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Danica & Adrian</h3>
                     <p class="text-alt"><small>Acrolama</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <p class="about"></p>
                     <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                        <li><a href="https://facebook.com/acrolama"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://instagram.com/Acrolama"><span class="fa fa-instagram"></span></a></li>
+                         <li><a href="https://acrolama.com"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
