--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -260,7 +260,9 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias Bleisch und Paule" class="img-responsive"></div>
                     <h3 class="name">Matthias & Paulina</h3>
                     <p class="text-alt"><small>Mäd und Pau</small></p>
-                    <p class="about">Slacklining, Capoira, Acrobatics ... you name it. Moving is their thing. </p>
+                    <p class="about">Feet on the head! Crazy acrobats, who loves challenges and know many
+acro tricks in standing. We are happy to have them at the Urban Acro
+Festival in Zürich! They will come up for you with amazing workshops.</p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
@@ -271,10 +273,15 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker3.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Salvatore</h3>
                     <p class="text-alt"><small>Bareful</small></p>
-                    <p class="about"></p>
+                    <p class="about">He teaches Yoga, AcroYoga, Meditation and Slackline and combines these
+activities in a creative and playful way. The practice of extreme sports
+combined to meditation establishes the balance between playing and
+staying. In both activities the ultimate goal is to live here and now,
+to play here and now, to stay here and now.
+</p>
                     <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-external-link"></span></a></li>
+                        <li><a href="https://www.facebook.com/bareful"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -283,8 +290,11 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker4.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Phillip & Kath</h3>
-                    <p class="text-alt"><small> Duo Kallipi</small></p>
-                    <p class="about"></p>
+                    <p class="about">e is Co-Founder of "Urban Acro Festival Zürich" and a passionated
+Acroyogi. Since young age he got in contact with acrobatic and dance. He
+loves to share and teach with Kate acroyoga in "das Yoga Haus" Zürich.
+Kate is a smily person and love to move. She is certified teacher in
+Hatha Yoga, Rainbow Yoga Kids and Synergy Partner Yoga.</p>
                     <ul class="speaker-socials">
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                     </ul>
@@ -298,7 +308,6 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                     <p class="text-alt"><small>The Moody</small></p>
                     <p class="about"></p>
                     <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -308,7 +317,10 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_acrolama.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Danica & Adrian</h3>
                     <p class="text-alt"><small>Acrolama</small></p>
-                    <p class="about"></p>
+                    <p class="about">Two Acrobats who decided Acro made fun so it needs to spread. Co-Founder
+of "Winter Acro Festival" and now the "Urban Acro Festival Zürich" They
+bring with lots of passion the knowledge and experience to their
+students. Why lama? Cause like, Who doesn't like lamas!?</p>
                     <ul class="speaker-socials">
                         <li><a href="https://facebook.com/acrolama"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://instagram.com/Acrolama"><span class="fa fa-instagram"></span></a></li>
