--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -244,7 +244,7 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="John Doe" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_lorenz_und_cornelia.jpg' %}" alt="John Doe" class="img-responsive"></div>
                     <h3 class="name">Lorenz & Cornelia</h3>
                     <p class="text-alt"><small>Duo Scacciapensieri</small></p>
                     <p class="about">Amazing Acrobats with many many year of teaching and performing! Very happy to have them sharing with us this Weekend.</p>
@@ -270,7 +270,7 @@ Festival in Zürich! They will come up for you with amazing workshops.</p>
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker3.jpg' %}" alt="John Doe" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_salvatore.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Salvatore</h3>
                     <p class="text-alt"><small>Bareful</small></p>
                     <p class="about">He teaches Yoga, AcroYoga, Meditation and Slackline and combines these
@@ -288,9 +288,9 @@ to play here and now, to stay here and now.
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker4.jpg' %}" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">Phillip & Kath</h3>
-                    <p class="about">e is Co-Founder of "Urban Acro Festival Zürich" and a passionated
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_philipp_und_kate.jpg' %}" alt="Phillip un Kate im Urban Acro Festival" class="img-responsive"></div>
+                    <h3 class="name">Philipp & Kath</h3>
+                    <p class="about">Philipp is Co-Founder of "Urban Acro Festival Zürich" and a passionated
 Acroyogi. Since young age he got in contact with acrobatic and dance. He
 loves to share and teach with Kate acroyoga in "das Yoga Haus" Zürich.
 Kate is a smily person and love to move. She is certified teacher in
@@ -303,7 +303,7 @@ Hatha Yoga, Rainbow Yoga Kids and Synergy Partner Yoga.</p>
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker5.jpg' %}" alt="John Doe" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_moody.jpg' %}" alt="Moody im Urban Zürich Acro festival" class="img-responsive"></div>
                     <h3 class="name">Moody</h3>
                     <p class="text-alt"><small>The Moody</small></p>
                     <p class="about"></p>
@@ -314,7 +314,7 @@ Hatha Yoga, Rainbow Yoga Kids and Synergy Partner Yoga.</p>
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_acrolama.jpg' %}" alt="John Doe" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_acrolama.jpg' %}" alt="Acrolama, Danica Wagner und Adrian Garate im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Danica & Adrian</h3>
                     <p class="text-alt"><small>Acrolama</small></p>
                     <p class="about">Two Acrobats who decided Acro made fun so it needs to spread. Co-Founder
@@ -793,14 +793,12 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                                     <img src="{% static 'images/speakers/speaker1.jpg'%}" alt="" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day3_main_timeline" href="#schedule3_day3_main_time1" class="schedule-item-toggle collapsed">
-                                                <strong class="time highlight"><span class="icon icon-office-24"></span>10:30-12:00</strong>
-                                                <h6 class="title">8th Workshop Round<i class="icon icon-arrows-06"></i></h6>
+                                                <strong class="time highlight"><span class="icon icon-office-24"></span>16:00</strong>
+                                                <h6 class="title">Cleaning Time<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day3_main_time1" class="panel-collapse collapse in schedule-item-body">
                                                 <article>
-                                                    <p class="description">Content to be confirmed</p>
-                                                    <strong class="highlight speaker-name">Teacher 1: To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">Teacher 2: To be confirmed</strong>
+                                                        <p class="description"> Hoping all had a wonderful time we wanted to ask you to help us clean the house :)! Thanks you all! </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -830,7 +828,7 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
     <section class="section align-center">
         <div class="container">
             <h5 class="heading-alt">Pricing</h5>
-            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answeard in our<a href="#" > Payment Policys</a> otherwise just write us!</p>
+            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answeard in our<a href="#" > Return Policies</a> otherwise just write us!</p>
 
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="package-column package-bright special-column">
@@ -845,28 +843,9 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                 <li><span class="fa fa-check check-icon"></span>Saturday Night Event</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-lg btn-white">Buy now</a>
+                        <a href="#" class="btn btn-lg btn-white" data-modal-link="email-ticket">Register</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section id="sign_up" class="section bg-cover overlay bg4 light-text align-center">
-        <div class="container">
-            <h2><span class="highlight">Newsletter</span> Sign Up</h2>
-            <small>No Spam - Only latest news, price and activity updates</small>
-            <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                    <form id="subscribe_main" action="" method="post" enctype="multipart/form-data" class="form row newsletter-form mailchimp-form">{% csrf_token %}
-                    <fieldset class="col-sm-8">
-                        <input id="NewsletterEmail" name="NewsletterEmail" type="email" placeholder="email@email.com">
-                    </fieldset>
-                    <fieldset class="col-sm-4">
-                        <input type="submit" value="submit" class="btn btn-sm btn-outline-clr">
-                    </fieldset>
-                    <div class="response"></div>
-                </form>
             </div>
         </div>
     </section>
@@ -942,33 +921,40 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
         <div class="modal-box small animated" data-animation="zoomIn" data-duration="700">
             <span class="close-btn icon icon-office-52"></span>
             <h5 class="align-center"><span class="highlight">Registration</span></h5>
-            <form class="form registration-form align-center">{% csrf_token %}
+            <form class="form registration-form align-center disable-ajax-form" method="post">{% csrf_token %}
+                {% if form.errors.non_field_errors %}
+                {{ form.errors.non_field_errors }}
+                {% endif %}
                 <fieldset class="col-sm-12">
-                    <label for="first_name">First Name</label>
-                    <input id="first_name" name="first_name" type="text">
-                </fieldset>
-                <fieldset class="col-sm-12">
-                    <label for="last_name">Last Name</label>
-                    <input id="last_name" name="last_name" type="text">
+                    <label for="first_name">Name</label>
+                    <input id="name" name="name" type="text" required>
                 </fieldset>
                 <fieldset class="col-sm-12">
                     <label for="email">Email</label>
-                    <input id="email" name="email" type="email">
+                    <input id="email" name="email" type="email" required>
                 </fieldset>
                 <fieldset class="col-sm-12">
-                    <label for="comment">Comment</label>
-                    <input id="comment" name="email" type="text">
+                    <label for="address">Address</label>
+                    <input id="address" name="address" type="text" required>
                 </fieldset>
                 <fieldset class="col-sm-12">
-                   <label for="pass1">Sleeping</label>
-                   <select id="pass1" name="pass1">
+                    <label for="numero">Phone</label>
+                    <input id="numero" name="numero" type="text" required>
+                </fieldset>
+                <fieldset class="col-sm-12">
+                    <label for="comment">Comment (e.g Allergies)</label>
+                    <input id="comment" name="comment" type="text">
+                </fieldset>
+                <fieldset class="col-sm-12">
+                   <label for="option">Sleeping</label>
+                   <select id="option" name="option" required>
                      <option value="" selected disabled>-- Select --</option>
-                     <option value="0">With Sleeping Spot</option>
-                     <option value="3">NO Sleeping Spot</option>
+                     <option value="1">With Sleeping Spot</option>
+                     <option value="0">NO Sleeping Spot</option>
                    </select>
                 </fieldset>
                 <fieldset class="col-sm-12">
-                    <input id="privacy" name="privacy" type="checkbox"><label for="privacy">I read & agree with <a href="#">Return Policies</a> </label>
+                    <input id="privacy" name="privacy" type="checkbox"><label for="privacy">I read & agree with <a href="/#pricing">Return Policies</a> </label>
                     <br />
                     <br />
                 </fieldset>
