--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -345,9 +345,9 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
 
                     <!-- Navigation by day start -->
                     <ul class="nav nav-schedule">
-                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">03/05/2018</p></a></li>
-                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">04/05/2018</p></a></li>
-                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">05/05/2018</p></a></li>
+                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">03/08/2018</p></a></li>
+                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">04/08/2018</p></a></li>
+                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">05/08/2018</p></a></li>
                     </ul>
                     <!-- Navigation by day end -->
 
@@ -857,7 +857,7 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
             <br />
             <br />
 
-            <a href="#" class="btn btn-lg btn-outline">Register</a>
+            <a href="#" class="btn btn-lg btn-outline"data-modal-link="email-ticket">Register</a>
         </div>
     </section>
 
