--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="PSD, HTML5, CSS3">
-    <meta property="og:image" {% static 'images/logo_acrofestival.png'%}">
+    <meta property="og:image" content="{% static 'images/logo_acrofestival.png'%}">
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
 	<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
 
