--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -5,9 +5,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{% block title %}AcroFestival{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="PSD, HTML5, CSS3">
+    <meta name="description" content="The First Acro, Acroyoga Festival in Zürich Switzerland. Come and join us in 3 days of playing with movement, acrobatics, yoga and healing arts.">
+    <meta name="author" content="Adrian Garate">
+    <meta name="keywords" content="Acroyoga, Acrofestival, Acrobatic, Akrobatik, Acro Zürich, Acroyoga Zürich, Acrolama Festival">
+    <meta property="og:url" content="www.acrofestival.ch" />
+    <meta property="og:title" content="Urban Acro Festival Züri" />
     <meta property="og:image" content="{% static 'images/logo_acrofestival.png'%}">
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
 	<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
