Added sponsors and meta

--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The First Acro, Acroyoga Festival in Zürich Switzerland. Come and join us in 3 days of playing with movement, acrobatics, yoga and healing arts.">
     <meta name="author" content="Adrian Garate">
     <meta name="keywords" content="Acroyoga, Acrofestival, Acrobatic, Akrobatik, Acro Zürich, Acroyoga Zürich, Acrolama Festival">
-    <meta property="og:url" content="www.acrofestival.ch" />
+    <meta property="og:url" content="https://www.acrofestival.ch" />
     <meta property="og:title" content="Urban Acro Festival Züri" />
     <meta property="og:image" content="{% static 'images/logo_acrofestival.png'%}">
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
