--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -872,8 +872,8 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
             <div class="sponsors">
                 <div class="sponsor big"><img src="{% static 'images/sponsors/bareful.png' %}" alt=""></div>
                 <div class="sponsor big"><img src="{% static 'images/sponsors/acrolama.png' %}" alt=""></div>
-                <div class="sponsor big"><img src="{% static 'images/sponsors/sponsor-big-3.png' %}" alt=""></div>
-                <div class="sponsor big"><img src="{% static 'images/sponsors/sponsor-big-4.png' %}" alt=""></div>
+                <div class="sponsor big"><img src="{% static 'images/sponsors/kate.png' %}" alt=""></div>
+                <div class="sponsor big"><img src="{% static 'images/sponsors/chnopf.png' %}" alt=""></div>
             </div>
 
         </div>
