--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -241,23 +241,19 @@ In Zurich City there are many hostels or check out www.airbnb.com<br></p>
             <p class="text-alt">Meet our <span class="highlight">local teachers.</span></p>
             <br />
             <br />
-<!--
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_lorenz_und_cornelia.jpg' %}" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">Lorenz & Cornelia</h3>
-                    <p class="text-alt"><small>Duo Scacciapensieri</small></p>
-                    <p class="about">Amazing Acrobats with many many year of teaching and performing! Very happy to have them sharing with us this Weekend.</p>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_jeanine.jpg' %}" alt="Jeanine in Urban Acro AcroFestival" class="img-responsive"></div>
+                    <h3 class="name">Jeanine </h3>
+                    <p class="text-alt"><small>Jeany</small></p>
+                    <p class="about">The Zirkusquartier is her home, working place, moving space, performing stage. How awesome is that!?. Very happy to have this amazing Persona with us! Enjoy her all you can!</p>
                     <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
             </div>
--->
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias Bleisch und Paule" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias Bleisch und Paule Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">Matthias & Paulina</h3>
                     <p class="text-alt"><small>Mäd und Pau</small></p>
                     <p class="about">Feet on the head! Crazy acrobats, who loves challenges and know many
@@ -300,18 +296,16 @@ Hatha Yoga, Rainbow Yoga Kids and Synergy Partner Yoga.</p>
                     </ul>
                 </div>
             </div>
-            <!--
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_moody.jpg' %}" alt="Moody im Urban Zürich Acro festival" class="img-responsive"></div>
-                    <h3 class="name">Moody</h3>
-                    <p class="text-alt"><small>The Moody</small></p>
-                    <p class="about"></p>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_laura.jpg' %}" alt="Laura Vogel im Urban Zürich Acro festival" class="img-responsive"></div>
+                    <h3 class="name">Laura Vogel</h3>
+                    <p class="text-alt"><small>Laura</small></p>
+                    <p class="about">Originaly from Berlin. She is a choregrapher, performer and teacher in Zürich. </p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
             </div>
-            -->
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_acrolama.jpg' %}" alt="Acrolama, Danica Wagner und Adrian Garate im Urban Acro Festival" class="img-responsive"></div>
